# 3DViewer_1

./: README.md
src/: Doxyfile  Makefile
src/3D_Viewer/: CMakeLists.txt
src/3D_Viewer/QtGifImage/: qgifimage.cpp  qgifimage_p.h
src/3D_Viewer/back/: 3d_viewer.h  affine.c  file_parser.c
src/3D_Viewer/front/OpenGL/: glwidget.cpp  glwidget.h  style.cpp  transform.cpp
src/3D_Viewer/front/ViewerWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  styleWindow.cpp  transformationWindow.cpp
src/Tests/: 3d_viewer_tests.c  3d_viewer_tests.h  arrays_for_tests.h
